fix margin spacing between social icons

--- a/custom.css
+++ b/custom.css
@@ -7,6 +7,7 @@ main {
 	position: relative;
 	top: 0;
 	transition: top ease 0.25s;
+	margin: 0 30px;
 }
 #social a:hover {
 	  top: -20px;
